--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start:reload": "nodemon index.js",
     "test": "mocha"
   },
   "repository": {
@@ -19,7 +20,7 @@
   "homepage": "https://github.com/gvilarino/docker-testing#readme",
   "dependencies": {
     "express": "4.16.4",
-    "mongodb": "3.1.9"
+    "mongodb": "^3.4.1"
   },
   "devDependencies": {
     "mocha": "5.2.0",
